force-app/main/default/objects/Product2/fields/Alpine_Badge__c.field-meta.xml
<CustomField>
    <fullName>Alpine_Badge__c</fullName>
    <label>Alpine Badge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>