force-app/main/default/objects/Product2/fields/Alpine_Category__c.field-meta.xml
<CustomField>
    <fullName>Alpine_Category__c</fullName>
    <label>Alpine Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>