force-app/main/default/objects/Product2/fields/Alpine_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Alpine_Short_Description__c</fullName>
    <label>Alpine Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>