force-app/main/default/objects/Product2/fields/Alpine_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Alpine_Sort_Order__c</fullName>
    <label>Alpine Sort Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>