force-app/main/default/objects/Product2/fields/Show_on_Alpine__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Alpine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Alpine</label>
    <type>Checkbox</type>
</CustomField>