force-app/main/default/objects/Product2/listViews/Alpine_Storefront_Admin.listView-meta.xml
<ListView>
    <fullName>Alpine_Storefront_Admin</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Show_on_Alpine__c</columns>
    <columns>Alpine_Sort_Order__c</columns>
    <columns>Alpine_Category__c</columns>
    <columns>Alpine_Badge__c</columns>
    <columns>Alpine_Short_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Alpine</value>
    </filters>
    <label>Alpine Storefront Admin</label>
</ListView>